<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="handlers"
            type="com.example.calculator.calculator.Handler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_zero"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{(view) -> handlers.setNumber(view, `0`)}"
            android:text="0"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_decimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_seven" />

        <Button
            android:id="@+id/btn_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{(view) -> handlers.setNumber(view, `1`)}"
            android:text="1"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_four"
            app:layout_constraintEnd_toStartOf="@+id/btn_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{(view) -> handlers.setNumber(view, `2`)}"
            android:text="2"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_one"
            app:layout_constraintEnd_toStartOf="@+id/btn_three"
            app:layout_constraintStart_toEndOf="@+id/btn_one"
            app:layout_constraintTop_toBottomOf="@+id/btn_multiple" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> handlers.setNumber(view, `3`)}"
            android:text="3"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_two"
            app:layout_constraintEnd_toStartOf="@+id/btn_minus"
            app:layout_constraintStart_toEndOf="@+id/btn_two"
            app:layout_constraintTop_toTopOf="@+id/btn_two" />

        <Button
            android:id="@+id/btn_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{(view) -> handlers.setNumber(view, `4`)}"
            android:text="4"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_seven"
            app:layout_constraintEnd_toStartOf="@+id/btn_five"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_one" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> handlers.setNumber(view, `5`)}"
            android:text="5"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_four"
            app:layout_constraintEnd_toStartOf="@+id/btn_six"
            app:layout_constraintStart_toEndOf="@+id/btn_four"
            app:layout_constraintTop_toTopOf="@+id/btn_four" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> handlers.setNumber(view, `6`)}"
            android:text="6"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_five"
            app:layout_constraintEnd_toStartOf="@+id/btn_plus"
            app:layout_constraintStart_toEndOf="@+id/btn_five"
            app:layout_constraintTop_toTopOf="@+id/btn_five" />

        <Button
            android:id="@+id/btn_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{(view) -> handlers.setNumber(view, `7`)}"
            android:text="7"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_zero"
            app:layout_constraintEnd_toStartOf="@+id/btn_eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_four" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{(view) -> handlers.setNumber(view, `8`)}"
            android:text="8"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_zero"
            app:layout_constraintEnd_toStartOf="@+id/btn_nine"
            app:layout_constraintStart_toEndOf="@+id/btn_seven"
            app:layout_constraintTop_toBottomOf="@+id/btn_five" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> handlers.setNumber(view, `9`)}"
            android:text="9"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_eight"
            app:layout_constraintEnd_toStartOf="@+id/btn_equals"
            app:layout_constraintStart_toEndOf="@+id/btn_eight"
            app:layout_constraintTop_toTopOf="@+id/btn_eight" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:onClick="@{(view) -> handlers.setSymbol(view, `+`)}"
            android:text="+"
            android:textColor="@color/lightTextColor"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_six"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_six"
            app:layout_constraintTop_toTopOf="@+id/btn_six" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:onClick="@{(view) -> handlers.setSymbol(view, `-`)}"
            android:text="-"
            android:textColor="@color/lightTextColor"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_three"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_three"
            app:layout_constraintTop_toTopOf="@+id/btn_three" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:onClick="@{(view) -> handlers.setSymbol(view, `/`)}"
            android:text="%"

            android:textColor="@color/lightTextColor"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_multiple"
            app:layout_constraintEnd_toEndOf="@+id/btn_three"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_three"
            app:layout_constraintTop_toTopOf="@+id/btn_multiple"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_multiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:onClick="@{(view) -> handlers.setSymbol(view, `*`)}"
            android:text="x"
            android:textColor="@color/lightTextColor"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_clear"
            app:layout_constraintEnd_toEndOf="@+id/btn_two"
            app:layout_constraintStart_toStartOf="@+id/btn_two" />

        <Button
            android:id="@+id/btn_equals"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{handlers::setEquals}"
            android:text="="
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_nine"
            app:layout_constraintTop_toTopOf="@+id/btn_nine"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:onClick="@{(view) -> handlers.setNumber(view, `clear`)}"
            android:text="C"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_one"
            app:layout_constraintStart_toStartOf="@+id/btn_one"
            tools:layout_editor_absoluteY="460dp" />

        <Button
            android:id="@+id/btn_decimal"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> handlers.setNumber(view, `.`)}"
            android:text="."
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_zero"
            app:layout_constraintEnd_toStartOf="@+id/btn_equals"
            app:layout_constraintStart_toEndOf="@+id/btn_zero"
            app:layout_constraintTop_toTopOf="@+id/btn_zero" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>